src/objects/eRebate__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_To_Number_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pls select SoldTo number if rebate is per SoldTo</inlineHelpText>
        <label>Sold To Number 2</label>
        <referenceTo>SAP_Customer__c</referenceTo>
        <relationshipName>eRebate1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pls select SoldTo number if rebate is per SoldTo number</inlineHelpText>
        <label>Sold To Number</label>
        <referenceTo>SAP_Customer__c</referenceTo>
        <relationshipName>eRebate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Engagement</fullName>
                    <default>true</default>
                    <label>Initial Engagement</label>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Commitment</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Take_or_pay_provisions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>e.g. long term obligations to purchase irrespective of actual demand</inlineHelpText>
        <label>Take or pay provisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Department</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebate3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_and_Condition__c</fullName>
        <label>Term and Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Est_Rebate_Amount_USD__c</fullName>
        <formula>Total_Est_Rebate_Amount__c / IF(ISBLANK( Locked_Exchange_Rate__c ),  1 , Locked_Exchange_Rate__c )</formula>
        <label>Total Est Rebate Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Est_Rebate_Amount__c</fullName>
        <label>Total Est Rebate Amount</label>
        <summarizedField>eRebate_Product__c.Estimated_Rebate_Amount__c</summarizedField>
        <summaryForeignKey>eRebate_Product__c.eRebate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebate6</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rebate</label>
    <listViews>
        <fullName>All_Rebate</fullName>
        <columns>Rebate_Nr__c</columns>
        <columns>Rebate_Program_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CACC__c</columns>
        <columns>Total_Est_Rebate_Amount_USD__c</columns>
        <columns>Capped_Payout_USD__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>End_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rebate</label>
    </listViews>
    <listViews>
        <fullName>ByRebateNbr</fullName>
        <columns>Rebate_Nr__c</columns>
        <columns>Rebate_Program_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CACC__c</columns>
        <columns>Total_Est_Rebate_Amount_USD__c</columns>
        <columns>Capped_Payout_USD__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>End_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rebate_Nr__c</field>
            <operation>equals</operation>
            <value>20131106-7323</value>
        </filters>
        <label>ByRebateNbr</label>
    </listViews>
    <listViews>
        <fullName>My_Rebate</fullName>
        <columns>NAME</columns>
        <columns>Programe_Type__c</columns>
        <columns>Rebate_Type__c</columns>
        <columns>Rebate_Program_Name__c</columns>
        <columns>Sales_Channel__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Total_Est_Rebate_Amount_USD__c</columns>
        <columns>Capped_Payout_USD__c</columns>
        <columns>Stage__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Rebate</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Rebate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate</pluralLabel>
    <recordTypes>
        <fullName>Distribution_ODM_Fullfillment</fullName>
        <active>true</active>
        <description>ASIA Region S&amp;D alike program on market price for products not on S&amp;D program, with similar drivers as S&amp;D</description>
        <label>Distribution ODM Fullfillment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incentive_T_Cs</fullName>
        <active>true</active>
        <description>Distribution related programs which included POS target, Special deal, Design win, Scrap allowance, Tech. Support and Volumn price agreement.</description>
        <label>Incentive / T&amp;Cs</label>
    </recordTypes>
    <recordTypes>
        <fullName>OEM_EMS</fullName>
        <active>true</active>
        <description>OEM/EMS related incentive programs</description>
        <label>OEM / EMS</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Apttus_Agreement_Number_Validation</fullName>
        <active>true</active>
        <description>Apttus Agreement Number is required if Apttus Agreement is checked</description>
        <errorConditionFormula>AND((Apttus_Agreement__c=True), ISBLANK(Apttus_Agreement_Number__c))</errorConditionFormula>
        <errorDisplayField>Apttus_Agreement_Number__c</errorDisplayField>
        <errorMessage>Apttus Agreement Number is required if Apttus Agreement is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus_Rebate_checking</fullName>
        <active>true</active>
        <description>Apttus Agreement must check if Rebate Agreement in Apttus is Yes.</description>
        <errorConditionFormula>AND(ISPICKVAL(Rebate_Agreement_in_Apttus__c, &quot;Yes&quot;),   (Apttus_Agreement__c  = FALSE))</errorConditionFormula>
        <errorDisplayField>Apttus_Agreement__c</errorDisplayField>
        <errorMessage>Apttus Agreement must check if Rebate Agreement in Apttus is Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CACC_SoldTo_Customer_information</fullName>
        <active>true</active>
        <description>Customer info. is require in  saving  Rebate record : 
either Consolidate_Code_Description or Sold_To_Number  no matter what STAGE is.</description>
        <errorConditionFormula>ISBLANK(Consolidated_Account_Code_Description__c) &amp;&amp; ISBLANK(Sold_To_Number__c) &amp;&amp; ISBLANK( Sold_To_Number_2__c)</errorConditionFormula>
        <errorMessage>Consolidation Code (CACC) or SoldTo number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CappedPayout_more_than_Rebate_Amount</fullName>
        <active>true</active>
        <description>Capped Payout (USD) should be more than Total Rebate Est Amount (USD)</description>
        <errorConditionFormula>Capped_Payout_USD__c &lt; Total_Est_Rebate_Amount_USD__c</errorConditionFormula>
        <errorDisplayField>Capped_Payout_USD__c</errorDisplayField>
        <errorMessage>Capped Payout (USD) should be more than Total Est Rebate Amount (USD)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CappedPayout_required_for_DECISION_stage</fullName>
        <active>true</active>
        <description>CappedPayout is requred when Stage in DECISION</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Stage__c , &quot;Decision&quot;) , 
ISBLANK( Capped_Payout_USD__c ) , 
NOT(ISPICKVAL(Programe_Type__c, &quot;Distribution ODM Fullfillment&quot;))
)</errorConditionFormula>
        <errorDisplayField>Stage__c</errorDisplayField>
        <errorMessage>Capped Payout value is required when Stage in Decision</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_require_in_DECISION_stage</fullName>
        <active>true</active>
        <description>Customer eMail address is requried when STAGE in Decision</description>
        <errorConditionFormula>AND( ISPICKVAL(Stage__c, &quot;Decision&quot;), ISBLANK(Customer_Contact__c), (NOT($User.ProfileId=&quot;00e20000001Nc7g&quot;)))</errorConditionFormula>
        <errorDisplayField>Customer_Contact__c</errorDisplayField>
        <errorMessage>Pls give customer eMail address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Industry_SubSegment_is_a_mandatory_field</fullName>
        <active>true</active>
        <description>Industry Segment is a mandatory field.</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Industry_Segment__c , &quot;&quot;) , 
NOT( RecordType.Name = &quot;Incentive / T&amp;Cs&quot;), 
NOT( RecordType.Name = &quot;Distribution ODM Fullfillment&quot;), 
OR( 
ISPICKVAL( Sales_Channel__c , &quot;OEM&quot;) , 
ISPICKVAL( Sales_Channel__c , &quot;EMS&quot;) 
), 
OR( 
CreatedDate &gt;= DATETIMEVALUE(&quot;2014-12-03 05:00:00&quot;), 
ISBLANK(CreatedDate ) 
) 
)</errorConditionFormula>
        <errorDisplayField>Industry_Segment__c</errorDisplayField>
        <errorMessage>Industry Segment is a mandatory field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Capped_Payout_for_Disti_ODM</fullName>
        <active>true</active>
        <description>Capped Payout value is not requried when Program Type is &quot;Distribution ODM Fullfillment&quot;</description>
        <errorConditionFormula>AND(ISPICKVAL(Programe_Type__c, &quot;Distribution ODM Fullfillment&quot;),
NOT(ISBLANK(Capped_Payout_USD__c)),
 $Profile.Id &lt;&gt; &quot;00e20000001Nc7gAAC&quot;)</errorConditionFormula>
        <errorDisplayField>Capped_Payout_USD__c</errorDisplayField>
        <errorMessage>Capped Payout value is not requried when Program Type is &quot;Distribution ODM Fullfillment&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Products_is_requred_for_DECISION_stage</fullName>
        <active>true</active>
        <description>Products_is_requred_for_DECISION_stage</description>
        <errorConditionFormula>AND( ISPICKVAL( Stage__c , &quot;Decision&quot;) , OR(ISBLANK( Total_Est_Rebate_Amount_USD__c ), Total_Est_Rebate_Amount_USD__c &lt;5000) )</errorConditionFormula>
        <errorDisplayField>Stage__c</errorDisplayField>
        <errorMessage>Product and Rebate value &gt; USD5K are required when Stage in Decision</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rebate_EndDate_vs_Rebate_EffectiveDate</fullName>
        <active>true</active>
        <description>Rebate Effective Date cannot be later than Rebate End Date</description>
        <errorConditionFormula>Rebate_Effective_Date__c  &gt;= Rebate_End_Date__c  &amp;&amp; (NOT($User.ProfileId=&quot;00e20000001Nc7g&quot;))</errorConditionFormula>
        <errorDisplayField>Rebate_Effective_Date__c</errorDisplayField>
        <errorMessage>Rebate effective date cannot be later than Rebate End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Red_Flag_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Red_Flag__c,&quot;YES&quot; ) &amp;&amp; 

AND( Material_Limitations_to_do_Business__c = FALSE,  Purchase_obligations_exceeding_12_months__c = FALSE,
 Give_up_ownership_of_stocks_prior_to_pmt__c =FALSE,
 Acceptance_of_Supplier_s_T_Cs__c = FALSE,
 Contract_related_to_Export_Control_items__c = FALSE,
 Take_or_pay_provisions__c = FALSE,
 Liabilities_1_MUSD_outside_normal_biz__c = FALSE,
 Low_liability_exposure_of_supplier__c = FALSE,
 Long_term_payment_liabilities_12months__c =FALSE
)</errorConditionFormula>
        <errorDisplayField>Red_Flag__c</errorDisplayField>
        <errorMessage>Please select at least one checkin in Red Flag section below.</errorMessage>
    </validationRules>
</CustomObject>